# MiniGrabr

./: .env.example  pyproject.toml
src/bot/: config.py  main.py
src/bot/controllers/: application_controllers.py  common_controllers.py  order_controllers.py  user.py  user_controllers.py
src/bot/handlers/: base.py  common_handlers.py  payment_handlers.py
src/bot/handlers/customer/: create_order_menu.py  customer_application.py  customer_menu.py
src/bot/handlers/freelancer/: freelancer_menu.py
src/bot/handlers/traveler/: traveler_application.py  traveler_menu.py
src/bot/internal/: context.py  dict.py  enums.py  lexicon.py
src/bot/keyboards/: applications_keyboard.py  callbacks.py  common_keyboards.py  customer_keyboard.py  traveler_keyboards.py
src/bot/keyboards/customer/: customer_keyboard.py  new_order_keyboard.py
src/bot/keyboards/freelancer/: freelancer_keyboard.py
src/bot/middlewares/: session.py
src/database/: db.py  models.py  tables_helper.py
