[project]
name = "MiniGrabr"
version = "0.1.0"
description = "aiogram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "arrow>=1.3.0",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 119
target-version = "py312"

[project.scripts]
bot-run = "bot.main:run_main"
create-db = "database.tables_helper:run_main"
